<resources>
    <string name="app_name">Roll The Dice</string>
    <string name="player_a">Player A</string>
    <string name="game_point_a">0</string>
    <string name="player_b">Player B</string>
    <string name="game_point_b">0</string>
    <string name="game_point">Game Point</string>
    <string name="game_point_value">100</string>
    <string name="dice_image_contentDescription">Dice Image</string>
    <string name="start">START</string>
</resources>
